DevTools: Include firstMeaningfulPaint in lifecycle events

Bug: 772588
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ia8df989fed90622d96ef4867353a5f863ea435ff
Reviewed-on: https://chromium-review.googlesource.com/706176
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507285}
Former-commit-id: c955beb2aa72f8d95b3878f14dae3f6abfd66228